welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse()
for ( i<-0 to 6 ){
	while(!estFaceMur){
		avance()
	}
	 	if (getDirection== Direction.OUEST){ 
	 	else {droite(); avance(); droite()
	 }
	 	}
	 	if ( getDirection==Direction.EST){
	 	gauche(); avance(); gauche()
	 	}
	 	
	 }
}
